force-app/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__FontSize__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FontSize__c</fullName>
        <description>Font size to use when rendering this content on the generated PDF quote document.</description>
        <inlineHelpText>Font size to use when rendering this content on the generated PDF quote document.</inlineHelpText>
        <label>Font Size</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>