force-app/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__Markup__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Markup__c</fullName>
        <description>Contains the markup if this content is of type &quot;Markup&quot;.</description>
        <inlineHelpText>Contains the markup if this content is of type &quot;Markup&quot;.</inlineHelpText>
        <label>Markup</label>
        <length>32000</length>
        <type>Html</type>
    </CustomField>