force-app/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__RawMarkup__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__RawMarkup__c</fullName>
        <description>Raw HTML markup. Rich Text field (Markup) strips out many HTML tags so this holds the original version as created by the editor.</description>
        <inlineHelpText>Original HTML version of the content in the Markup field.</inlineHelpText>
        <label>Raw Markup</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </CustomField>