force-app/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__TableStyle__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__TableStyle__c</fullName>
        <description>Style of the table used for line items. Standard (default) = user-defined fields as columns with line items listed vertically.</description>
        <inlineHelpText>Style of the table used for line items. Standard (default) = user-defined fields as columns with line items listed vertically.</inlineHelpText>
        <label>Table Style</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Price Dimensions as Columns</fullName>
                </value>
                <value>
                    <fullName>Price Dimensions as Rows with Summary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>