force-app/main/default/objects/SBQQ__TemplateContent__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of this content.</description>
        <inlineHelpText>Type of this content.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HTML</fullName>
                    <default>true</default>
                    <label>HTML</label>
                </value>
                <value>
                    <fullName>Line Items</fullName>
                </value>
                <value>
                    <fullName>Quote Terms</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>